# ebay-pokemon-automation

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/pokebargain/: __init__.py  cli.py  config.py  factory.py  logging.py
src/pokebargain/db/: __init__.py  base.py  models.py  repository.py
src/pokebargain/ebay/: __init__.py  browse.py  client.py  errors.py  oauth.py
src/pokebargain/matching/: __init__.py  filter.py  fuzzy.py
src/pokebargain/pipeline/: scan.py
src/pokebargain/scanner/: background.py
src/pokebargain/scoring/: opportunity.py
src/pokebargain/tcg/: __init__.py  client.py
src/pokebargain/vision/: __init__.py  openai_client.py
src/pokebargain/web/: app.py  deps.py  routes.py
src/pokebargain/web/static/: styles.css
src/pokebargain/web/templates/: base.html  dashboard.html  listing.html
tests/integration/: test_web.py
tests/unit/: test_fuzzy_and_score.py
