[project]
name = "pokebargain"
version = "0.1.0"
description = "AI-powered Pokémon card bargain finder for eBay UK — discovers undervalued listings via fuzzy matching, vision, and market pricing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Muhammad Muazzain", email = "muhammadmuazzain07@gmail.com" }]

dependencies = [
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "openai>=1.40",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.9",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
pokebargain = "pokebargain.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokebargain"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
